--- a/tutorial_TeX/RB_Discrete_Morphology_Tutorial/RB_DiscreteMorphology_Tutorial_results_content.tex
+++ b/tutorial_TeX/RB_Discrete_Morphology_Tutorial/RB_DiscreteMorphology_Tutorial_results_content.tex
@@ -71,7 +71,7 @@ To compare these densities, click the ``Marginal Prob Distribution'' tab in the 
 
 Second, we are interested in characterizing the degree of heterogeneity estimated by the beta-discretized model.
 If the data were distributed by a single morphological rate matrix, then we would expect to see very little variation among the different values in {\tt cats}, and very large values for the shape and scale parameters of the discrete-beta distribution.
-For example, if {\tt alpha\_ofbeta = \beta\_ofbeta = 1000}, then that would cause all discrete-beta categories to have values approaching 0.5.
+For example, if {\tt alpha\_ofbeta = beta\_ofbeta = 1000}, then that would cause all discrete-beta categories to have values approaching 0.5, which approximates a symmetric Mk model.
 
 \begin{figure}[h!]
 \fbox{%
