--- a/tutorial_TeX/RB_Discrete_Morphology_Tutorial/RB_DiscreteMorphology_Tutorial_1_content.tex
+++ b/tutorial_TeX/RB_Discrete_Morphology_Tutorial/RB_DiscreteMorphology_Tutorial_1_content.tex
@@ -233,9 +233,11 @@ First, we will create a vector of moves on branch lengths.
 This should be familiar from the \cl{RB\_CTMC} tutorial:
 {\tt \begin{snugshade*}
 \begin{lstlisting}
+br_len_lambda ~ dnExp(0.2)
+moves[mvi++] = mvScale(br_len_lambda, weight=5)
 nbr <- 2*names.size() - 3
 for (i in 1:nbr){
-    br_lens[i] ~ dnExponential(5.0)
+    br_lens[i] ~ dnExponential(br_len_lambda)
     moves[mvi++] = mvScale(br_lens[i]) 
 }
 \end{lstlisting}
@@ -260,8 +262,8 @@ alpha_morpho ~ dnExponential( 1.0 )
 rates_morpho := fnDiscretizeGamma( alpha_morpho, alpha_morpho, 4 )
 
 #Moves on the parameters to the Gamma distribution.
-moves[mvi++] = mvScale(alpha_morpho, lambda=0.01, weight=1.0)
-moves[mvi++] = mvScale(alpha_morpho, lambda=0.1,  weight=1.0)
+moves[mvi++] = mvScale(alpha_morpho, lambda=0.01, weight=5.0)
+moves[mvi++] = mvScale(alpha_morpho, lambda=0.1,  weight=3.0)
 moves[mvi++] = mvScale(alpha_morpho, lambda=1,    weight=1.0)
 \end{lstlisting}
 \end{snugshade*}}
@@ -272,7 +274,9 @@ Next we assemble the tree and specify a move on the topology.
 \begin{lstlisting}
 tau ~ dnUniformTopology(names)
 phylogeny := treeAssembly(tau, br_lens)
-moves[mvi++] = mvSPR(tau)
+moves[mvi++] = mvNNI(tau, weight=2*nbr)
+moves[mvi++] = mvSPR(tau, weight=nbr)
+tree_length := phylogeny.treeLength()
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -361,13 +365,27 @@ monitors[mni++] = mnFile(filename="output/mk_simple.trees", printgen=10, phyloge
 \end{lstlisting}
 \end{snugshade*}}
 
-The last monitor we will add to our analysis will print information to the screen.
+The third monitor we will add to our analysis will print information to the screen.
 Like with \cl{mnFile} we must tell \cl{mnScreen} which parameters we'd like to see updated on the screen. 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 monitors[mni++] = mnScreen(printgen=10)
 \end{lstlisting}
 \end{snugshade*}}
+
+Finally, we'll create an ancestral state monitor, which is described in more detail in Section \ref{sec:anc_states}.
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+monitors[mni++] = mnJointConditionalAncestralState(
+    tree=phylogeny,
+    ctmc=phyMorpho,
+    filename="output/mk_simple.states.txt",
+    type="Standard",
+    printgen=10,
+    withStartStates=false)
+\end{lstlisting}
+\end{snugshade*}}
+
 
 \medskip
 \subsubsection{Set-Up the MCMC}
@@ -383,7 +401,7 @@ The MCMC object that we named \cl{mymcmc} has a member method called \cl{.run()}
 This will execute our analysis and we will set the chain length to \cl{10000} cycles using the \cl{generations} option.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-mymcmc.run(generations=100000)
+mymcmc.run(generations=20000)
 \end{lstlisting}
 \end{snugshade*}}
 
