add some citations, minor edits

--- a/tutorial_TeX/RB_Discrete_Morphology_Tutorial/bayes.bib
+++ b/tutorial_TeX/RB_Discrete_Morphology_Tutorial/bayes.bib
@@ -339,6 +339,17 @@ url          = {http://www.R-project.org}
   pages     = {643--651}
 }
 
+@article{beaulieu2013,
+  title={Identifying hidden rate changes in the evolution of a binary morphological character: the evolution of plant habit in campanulid angiosperms},
+  author={Beaulieu, Jeremy M and O'meara, Brian C and Donoghue, Michael J},
+  journal={{Systematic Biology}},
+  volume={62},
+  number={5},
+  pages={725--737},
+  year={2013},
+  publisher={Oxford University Press}
+}
+
 @Article{beerli99,
   author    = {P. Beerli and J. Felsenstein},
   title     = {Maximum likelihood estimation of migration rates and effective population umbers in two populations using a coalescent approach},
@@ -1392,7 +1403,7 @@ url          = {http://www.R-project.org}
   journal   = {The American Naturalist},
   year      = 2003,
   volume    = 161,
-  pages     = {821–-825}
+  pages     = {821√ê-825}
 }
 
 @Article{furnas84,
@@ -4111,6 +4122,17 @@ url          = {http://www.R-project.org}
   pages     = {14--25}
 }
 
+@article{pagel94,
+  title={Detecting correlated evolution on phylogenies: a general method for the comparative analysis of discrete characters},
+  author={Pagel, Mark},
+  journal={Proceedings of the Royal Society of London B: Biological Sciences},
+  volume={255},
+  number={1342},
+  pages={37--45},
+  year={1994},
+  publisher={The Royal Society}
+}
+
 @Article{pagel99,
   author    = {M. Pagel},
   title     = {The maximum likelihood approach to reconstructing ancestral character states of discrete characters on phylogenies},
@@ -4684,7 +4706,7 @@ author = "Aloysius J. Phillips",
 }
 
 @Article{ronquist12,
-author 		= {Ronquist, Fredrik and Teslenko, Maxim and van der Mark, Paul and Ayres, Daniel L. and Darling, Aaron and Höhna, Sebastian and Larget, Bret and Liu, Liang and Suchard, Marc A. and Huelsenbeck, John P.}, 
+author 		= {Ronquist, Fredrik and Teslenko, Maxim and van der Mark, Paul and Ayres, Daniel L. and Darling, Aaron and H¬öhna, Sebastian and Larget, Bret and Liu, Liang and Suchard, Marc A. and Huelsenbeck, John P.}, 
 title 		= {MrBayes 3.2: Efficient {B}ayesian phylogenetic inference and model choice across a large model space},
 journal 	= {Systematic Biology}, 
 year 		= {2012}, 
@@ -5510,7 +5532,7 @@ doi 		= {10.1093/sysbio/sys029}
 
 @Article{verdinelli95,
   author    = {I. Verdinelli and L. Wasserman},
-  title     = {Computing {B}ayes factors using a generalization of the {S}avage–{D}ickey density ratio},
+  title     = {Computing {B}ayes factors using a generalization of the {S}avage√ê{D}ickey density ratio},
   journal   = {Journal of the American Statistical Association},
   year      = 1995,
   volume    = 90,
