--- a/tutorial_TeX/RB_Discrete_Morphology_Tutorial/RB_DiscreteMorphology_Tutorial_results_content.tex
+++ b/tutorial_TeX/RB_Discrete_Morphology_Tutorial/RB_DiscreteMorphology_Tutorial_results_content.tex
@@ -168,14 +168,14 @@ Viewing the states file, we see
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-Iteration	end_1	end_2	end_3	end_4
-0	?,0,?,?,?,?,?,?,?,?,?,?,?,?,?,?,0,0,0, ...
-10	?,0,?,?,?,?,?,?,?,?,?,?,?,?,?,?,0,0,0, ...
-20	?,0,?,?,?,?,?,?,?,?,?,?,?,?,?,?,0,0,0, ...
-30	?,0,?,?,?,?,?,?,?,?,?,?,?,?,?,?,0,0,0, ...
-40	?,0,?,?,?,?,?,?,?,?,?,?,?,?,?,?,0,0,0, ...
-50	?,0,?,?,?,?,?,?,?,?,?,?,?,?,?,?,0,0,0, ...
-...
+|*Iteration	end_1	end_2	end_3	end_4
+|*0	?,0,?,?,?,?,?,?,?,?,?,?,?,?,?,?,0,0,0, ...
+|*10	?,0,?,?,?,?,?,?,?,?,?,?,?,?,?,?,0,0,0, ...
+|*20	?,0,?,?,?,?,?,?,?,?,?,?,?,?,?,?,0,0,0, ...
+|*30	?,0,?,?,?,?,?,?,?,?,?,?,?,?,?,?,0,0,0, ...
+|*40	?,0,?,?,?,?,?,?,?,?,?,?,?,?,?,?,0,0,0, ...
+|*50	?,0,?,?,?,?,?,?,?,?,?,?,?,?,?,?,0,0,0, ...
+|*...
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -189,13 +189,13 @@ We observe the uncertainty in our ancestral state estimates by viewing the final
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 [ column headers are far to the left ]
-... 1,0,1,0,1,0,1,1,0,0,0,1,1,1
-... 1,1,1,1,1,0,0,1,0,0,1,1,1,0
-... 1,1,1,0,0,0,0,0,0,0,0,0,1,0
-... 1,1,0,1,1,0,1,0,0,1,0,0,1,0
-... 1,1,0,1,1,0,1,0,1,0,0,0,1,0
-... 1,1,0,1,1,0,1,0,1,1,0,0,1,0
-...
+|*... 1,0,1,0,1,0,1,1,0,0,0,1,1,1
+|*... 1,1,1,1,1,0,0,1,0,0,1,1,1,0
+|*... 1,1,1,0,0,0,0,0,0,0,0,0,1,0
+|*... 1,1,0,1,1,0,1,0,0,1,0,0,1,0
+|*... 1,1,0,1,1,0,1,0,1,0,0,0,1,0
+|*... 1,1,0,1,1,0,1,0,1,1,0,0,1,0
+|*...
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -269,9 +269,5 @@ Figure \ref{fig:mk_simple_ase}) shows that the discretized-beta model provides s
 \end{minipage}}
 \label{fig:mk_discretized_ase}
 \end{figure}
-
-Ancestral state estimate
-
-
 
 \newpage
