--- a/tutorial_TeX/RB_Discrete_Morphology_Tutorial/RB_DiscreteMorphology_Tutorial_3_content.tex
+++ b/tutorial_TeX/RB_Discrete_Morphology_Tutorial/RB_DiscreteMorphology_Tutorial_3_content.tex
@@ -23,7 +23,7 @@ Remember from the \cl{RB\_CTMC} lesson that stationary frequencies impact how li
 For example, it may be very likely, in a character, to change from 0 to 1.
 But if the frequency of 0 is very low, we will still seldom see this change. \par
 We can exploit the relationship between state frequencies and observed changes to allow for variable Q matrices across characters (Fig. 2).
-To do this, we generate a Beta distribution on state frequencies \citep{huelsenbeck01c}, and use the state frequencies from that Beta distribution to generate a series of Q-matrices to use to evaluate our data. \par
+To do this, we generate a Beta distribution on state frequencies \citep{huelsenbeck01c}, and use the state frequencies from that Beta distribution to generate a series of Q-matrices to use to evaluate our data \citep{pagel04}. \par
 This type of model is called a \textbf{mixture model}.
 There are assumed to be subdivisions in the data, which may require different parameters (in this case, state frequencies).
 These subdivisions are not defined \textit{a priori}. 
